Bug 478863 - Messages with future dates (>= tomorrow) badly break "Group by sort", missing group header string for "Future Dates". r=rkent